Fixed booking and SOS bookings

--- a/Views/Booking/BookingForm.cshtml
+++ b/Views/Booking/BookingForm.cshtml
@@ -174,7 +174,7 @@
                 localStorage.setItem('currentBookingKey', bookingKey);
 
                 // Redirect to confirmation with booking ID
-                window.location.href = '@Url.Action("ConfirmBooking", "Booking")?bookingId=' + bookingKey.replace('booking_', '');
+                window.location.href = '@Url.Action("ConfirmBooking", "Booking")?bookingId=' + bookingKey;
             });
 
             function generateGUID() {
